--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -825,7 +825,7 @@ section,
 
 .hero .carousel {
   width: 100%;
-  min-height: 70vh;
+  height: 100vh;
   padding: 0;
   margin: 0;
   background-color: var(--background-color);
@@ -840,14 +840,25 @@ section,
   }
 }
 
-.hero img {
+.top-aligned{
   position: absolute;
   inset: 0;
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover; /* Garante que a imagem cubra a área do contêiner */
-  object-position: center; /* Alinha a imagem no topo */
+  object-position: top; /* Alinha a imagem no topo */
+  z-index: 1;
+}
+
+.center-aligned{
+  position: absolute;
+  inset: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Garante que a imagem cubra a área do contêiner */
+  object-position: center center; /* Alinha a imagem no topo */
   z-index: 1;
 }
 
@@ -894,7 +905,7 @@ section,
 }
 
 .hero .carousel-item h2 {
-  margin-bottom: 30px;
+  margin-top: 5em;
   font-size: 48px;
   font-weight: 700;
   animation: fadeInDown 1s both;
