--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -895,17 +895,17 @@ section,
 
 .hero .carousel-container {
   position: absolute;
-  inset: 90px 64px 64px 64px; /* Ajuste o valor conforme necessário para sua necessidade */
+  inset: 64px; /* Define espaçamento uniforme */
   display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
   flex-direction: column;
+  justify-content: flex-end; /* Move o conteúdo para o final do container */
+  align-items: center;
+  text-align: center;
   z-index: 3;
+  padding-bottom: 50px; /* Ajuste o espaço na parte inferior */
 }
 
 .hero .carousel-item h2 {
-  margin-top: 5em;
   font-size: 48px;
   font-weight: 700;
   animation: fadeInDown 1s both;
