--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -945,7 +945,7 @@ section,
   padding: 8px 32px;
   border-radius: 50px;
   transition: 0.5s;
-  margin: 20px 10px;
+  margin-top: 20px;
   animation: fadeInUp 1s both 0.4s;
 }
 
