--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,7 @@ button {
 }
 
 button:hover {
-  background-color: var(--button-hover-background);
+  background-color: color-mix(in srgb, var(--button-background), transparent 90%);
   color: var(--default-color);
   border-color: var(--border-hover-color);
 }
@@ -741,7 +741,7 @@ h6 {
   background-color: var(--accent-color);
   width: 40px;
   height: 40px;
-  border-radius: 4px;
+  border-radius: 40px;
   transition: all 0.4s;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
@@ -755,7 +755,7 @@ h6 {
 }
 
 .scroll-top:hover {
-  color: var(--contrast-color);
+  background: color-mix(in srgb, var(--accent-color), transparent 30%);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -1021,7 +1021,7 @@ section,
 }
 
 .hero .btn-get-started:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 20%);
+  background: color-mix(in srgb, var(--accent-color), transparent 40%);
 }
 
 .hero .carousel-control-prev,
@@ -1339,12 +1339,11 @@ section,
   margin: 10px;
   background: var(--contrast-color);
   color: var(--constrast-color);
-  border-radius: 5px;
+  border-radius: 40px;
 }
 
 .clinica .cta-btn:hover {
-  background: var(--contrast-color);
-  color: var(--accent-color);
+  background-color: color-mix(in srgb, var(--contrast-color), transparent 40%); 
   border: 2px solid var(--constrast-color);
 }
 
