--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,11 +16,9 @@
 @import url("https://fonts.cdnfonts.com/css/kiona-2");
 
 :root {
-  --default-font: "Kiona", system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --default-font: "Kiona";
   --heading-font: "Roxborough CF Thin", sans-serif;
-  --nav-font: "Marcellus", sans-serif;
+  --nav-font: "Bw Vivant", sans-serif;
 }
 
 :root {
@@ -416,7 +414,7 @@ h6 {
     padding: 18px 15px;
     font-size: 16px;
     font-family: var(--nav-font);
-    font-weight: 400;
+    font-weight: 300;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -536,7 +534,7 @@ h6 {
     padding: 10px 20px;
     font-family: var(--nav-font);
     font-size: 17px;
-    font-weight: 500;
+    font-weight: 300;
     display: flex;
     align-items: center;
     justify-content: space-between;
