--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,21 +10,18 @@
 
 /* Registrar a fonte personalizada */
 @font-face {
-  font-family: "Roxborough CF";
-  src: url("../fonts/Roxborough-CF/roxborough-cf-regular.eot")
-      format("woff2"),
-    url("../fonts/Roxborough-CF/roxborough-cf-regular.woff")
-      format("woff"),
-      url("../fonts/Roxborough-CF/roxborough-cf-regular.eot");
+  font-family: "Roxborough CF Thin";
+  src: url("../fonts/roxborough-cf-thin.ttf") format("truetype");
 }
 
-@import url('https://fonts.cdnfonts.com/css/kiona-2');
+/* Importar fontes no topo */
+@import url("https://fonts.cdnfonts.com/css/kiona-2");
 
-/* Declarar as variáveis globais */
+/* Variáveis de fonte */
 :root {
-  --default-font: "Kiona", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Roxborough CF", sans-serif;
-  --nav-font: "Marcellus", sans-serif;
+  --default-font: "Kiona", sans-serif;
+  --heading-font: "Roxborough CF Thin", serif; /* Certifique-se de que esta fonte está importada */
+  --nav-font: "Kiona", sans-serif; /* Ou use 'bw-vivant-black' se desejar o peso mais pesado */
 }
 
 
