--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -659,7 +659,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #b7b8ba;
+  color: white;
   line-height: 1;
   margin: 0 6px;
   border-radius: 40px;
@@ -668,12 +668,12 @@ h6 {
   height: 36px;
   transition: 0.3s;
   text-decoration: none;
-  background-color: color-mix(in srgb, var(--contrast-color), transparent 10%);
+  border: 1px solid color-mix(in srgb, var(--contrast-color), transparent 50%);
 }
 
 .footer .social-links a:hover {
   text-decoration: none;
-  background-color: color-mix(in srgb, var(--contrast-color), transparent 40%);
+  border: none;
 }
 
 .footer .copyright {
