--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,7 @@ body {
   background-color: var(--background-color);
   font-family: var(--default-font);
   font-weight: 600;
+  color: var(--default-color);
 }
 
 p {
