--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,7 +337,8 @@ h6 {
   background-color: #b7b8ba;
   height: 40px;
   padding: 0;
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 600;
   transition: all 0.5s;
 }
 
