--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -545,12 +545,15 @@ h6 {
     inset: 60px 20px 20px 20px;
     padding: 10px 0;
     margin: 0;
-    border-radius: 6px;
     background-color: var(--nav-mobile-background-color);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .navmenu li {
+    margin: 10px;
   }
 
   .navmenu a,
@@ -560,6 +563,7 @@ h6 {
     font-family: var(--nav-font);
     font-size: 17px;
     font-weight: 300;
+    border-radius: 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -579,7 +583,10 @@ h6 {
     justify-content: center;
     border-radius: 50%;
     transition: 0.3s;
-    background-color: color-mix(in srgb, var(--accent-color), transparent 55%);
+    color: var(--accent-color);
+    font-weight: 600;
+    border: 1px solid var(--accent-color);
+    background-color: transparent;
   }
 
   .navmenu a i:hover,
