--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,17 +17,22 @@
   src: url("../fonts/source-sans-pro.light.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Kiona Regular";
+  src: url("../fonts/Kiona-Regular.ttf") format("truetype");
+}
+
 :root {
   --default-font: "Source Sans Pro Light", sans-serif;
-  --heading-font: "Roxborough CF Thin", sans-serif;
-  --nav-font: "Bw Vivant", sans-serif;
+  --heading-font: "Kiona Regular", sans-serif;
+  --nav-font: "Kiona Regular", sans-serif;
 }
 :root {
   /* Paleta Global */
   --background-color: #ffffff; /* Branco puro para o fundo principal */
   --default-color: #444444; /* Cinza escuro para o texto */
   --heading-color: #444444; /* Mesma cor para títulos e subtítulos */
-  --accent-color: #d4af37; /* Dourado sofisticado para chamar atenção */
+  --accent-color: #b29130; /* Dourado sofisticado para chamar atenção */
   --surface-color: #ffffff; /* Fundo de elementos como cartões e seções */
   --contrast-color: #ffffff; /* Texto sobre fundos escuros ou dourados */
   --gray-tone: #b7b8ba; /* Cinza refinado para bordas e áreas neutras */
@@ -185,7 +190,7 @@ h6 {
 }
 
 .subtitulo {
-  font-family: var(--nav-font);
+  font-family: var(--heading-font);
   font-weight: 200;
 }
 
@@ -668,7 +673,7 @@ h6 {
 }
 
 .footer h3 {
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 500;
   position: relative;
   padding: 0;
@@ -676,7 +681,7 @@ h6 {
 }
 
 .footer p {
-  font-size: 20px;
+  font-size: 18px;
   padding: 0;
   margin: 0 0 30px 0;
 }
@@ -686,7 +691,7 @@ h6 {
 }
 
 .footer .social-links a {
-  font-size: 16px;
+  font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -695,8 +700,8 @@ h6 {
   margin: 0 6px;
   border-radius: 40px;
   text-align: center;
-  width: 36px;
-  height: 36px;
+  width: 35px;
+  height: 35px;
   transition: 0.3s;
   text-decoration: none;
   border: 1px solid color-mix(in srgb, var(--contrast-color), transparent 50%);
@@ -814,8 +819,7 @@ h6 {
 }
 
 .page-title .heading h1 {
-  font-size: 38px;
-  font-weight: 500;
+  font-size: 34px;
 }
 
 .page-title nav {
@@ -874,7 +878,7 @@ section,
 }
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 500;
   margin-bottom: 20px;
   padding-bottom: 0;
@@ -884,7 +888,7 @@ section,
 
 .section-title span {
   position: absolute;
-  top: 4px;
+  top: 12px;
   color: color-mix(in srgb, var(--heading-color), transparent 88%);
   left: 0;
   right: 0;
@@ -1373,8 +1377,8 @@ section,
 .cirurgias img {
   display: block; /* Remove o espaço extra ao redor da imagem */
   margin: 0 auto; /* Centraliza horizontalmente */
-  max-width: 70%; /* Garante que a imagem não ultrapasse o tamanho do contêiner */
   height: auto; /* Mantém a proporção da imagem */
+  object-fit: cover;
 }
 
 .cirurgias .nav-tabs {
@@ -1496,7 +1500,7 @@ section,
 .noncirurgicos .tab-pane h3 {
   color: var(--heading-color);
   font-weight: 500;
-  font-size: 32px;
+  font-size: 26px;
   position: relative;
   margin-bottom: 20px;
   padding-bottom: 20px;
@@ -1558,6 +1562,14 @@ section,
     justify-content: center;
     /* Centralizar o conteúdo dentro do botão */
   }
+
+  .noncirurgicos .tab-pane img{
+    width: 100%;
+    height: 65vh;
+    object-fit: cover;
+    object-position: top;
+  }
+
 }
 
 /*--------------------------------------------------------------
