--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -347,7 +347,8 @@ h6 {
   transition: all 0.5s;
 }
 
-.header .topbar .contact-info i {
+.header .topbar .contact-info i,
+.header .topbar .contact-info a {
   font-style: normal;
   color: var(--contrast-color);
 }
@@ -355,7 +356,6 @@ h6 {
 .header .topbar .contact-info i a,
 .header .topbar .contact-info i span {
   padding-left: 5px;
-  color: var(--contrast-color);
 }
 
 @media (max-width: 575px) {
